hard-gists/660a9d578b5f0225e5f0/run.log
=== Docker Run Log for 660a9d578b5f0225e5f0 ===
Started at: Mi 29. Okt 16:39:47 CET 2025

[2025-10-29 16:39:47] START: Running container for 660a9d578b5f0225e5f0
[2025-10-29 16:39:48] SUCCESS: Container c333053d1f124bf2303293307ce6f35fdc0e9910749204cbc5f74241a08a3674 started for 660a9d578b5f0225e5f0
=== Container logs for 660a9d578b5f0225e5f0 ===
  File "/snippet.py", line 54
    print "Can't find image"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 660a9d578b5f0225e5f0 ===
[2025-10-29 16:39:50] INFO: Container c333053d1f124bf2303293307ce6f35fdc0e9910749204cbc5f74241a08a3674 has stopped
